<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".view.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        app:navigationIcon="@drawable/ic_go_back"
        app:title="Settings"
        app:titleTextColor="@android:color/white" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/toolbar"
        android:background="@android:color/darker_gray" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/separator"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMemory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/storage"
                android:textColor="@android:color/white"
                app:drawableStartCompat="@drawable/ic_storage" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="?actionBarSize"
                android:alpha="0.5"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/image_size"
                android:textColor="@android:color/white"
                app:drawableStartCompat="@drawable/ic_image_size" />

            <include
                android:id="@+id/layoutImageSize"
                layout="@layout/layout_image_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="?actionBarSize"
                android:alpha="0.5"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:text="@string/image_max_quality"
                    android:textColor="@android:color/white"
                    app:drawableStartCompat="@drawable/ic_photo" />

                <CheckBox
                    android:id="@+id/checkBoxImageMaxQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorOrange"
                    android:checked="true" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="56dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/txt_info_img_max_quality"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="?actionBarSize"
                android:alpha="0.5"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/video_resolution"
                android:textColor="@android:color/white"
                app:drawableStartCompat="@drawable/ic_video_resolution" />

            <include
                android:id="@+id/layoutVideoResolution"
                layout="@layout/layout_video_resolution" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="?actionBarSize"
                android:alpha="0.5"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:text="@string/sound"
                    android:textColor="@android:color/white"
                    app:drawableStartCompat="@drawable/ic_volume_up" />

                <CheckBox
                    android:id="@+id/checkBoxSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorOrange"
                    android:checked="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="?actionBarSize"
                android:alpha="0.5"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:text="@string/grid_lines"
                    android:textColor="@android:color/white"
                    app:drawableStartCompat="@drawable/ic_grid_lines" />

                <CheckBox
                    android:id="@+id/checkBoxGridLines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorOrange"
                    android:checked="true" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>